add flow 8 compatibility

--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,7 @@
         "MIT"
     ],
     "require": {
-        "neos/flow": "^6.3 || ^7.0 || dev-master",
+        "neos/flow": "^6.3 || ^7.0 || ^8.0 || dev-master",
         "aws/aws-sdk-php": "^3.0"
     },
     "autoload": {
